wipe out readme and rework image link

--- a/_posts/2023-05-11-second.md
+++ b/_posts/2023-05-11-second.md
@@ -11,5 +11,5 @@ Second test here.
 
 Let's see how this looks.
 
-![image](/_post_assets/kekhands.png)
+![image]({{ '/_post_assets/kekhands.png' | relative_url }})
 
