add example of link to other post

--- a/_posts/2023-05-11-second.md
+++ b/_posts/2023-05-11-second.md
@@ -11,5 +11,6 @@ Second test here.
 
 Let's see how this looks.
 
-![image]({{ '/_post_assets/kekhands.png' | relative_url }})
+![image](/_post_assets/kekhands.png)
 
+[link to older post]({{ 'blog/2023/05/11/first.html' | relative_url }})
