prepend baseurl to assets path

--- a/_posts/2023-05-11-second.md
+++ b/_posts/2023-05-11-second.md
@@ -11,6 +11,6 @@ Second test here.
 
 Let's see how this looks.
 
-![image](/assets/images/kekhands.png)
+![image]({{ site.baseurl }}/assets/images/kekhands.png)
 
 [link to older post]({{ 'blog/2023/05/11/first.html' | relative_url }})
