--- a/_posts/2023-05-11-first.md
+++ b/_posts/2023-05-11-first.md
@@ -3,6 +3,7 @@ layout: post
 title: "Writing a post demo"
 date: 2023-05-11 16:30
 categories: blog
+published: true
 github_comments_issueid: "1"
 ---
 
