WIP: writing readme. also testing a different way of linking posts

--- a/_posts/2023-05-11-second.md
+++ b/_posts/2023-05-11-second.md
@@ -14,3 +14,5 @@ Let's see how this looks.
 ![image]({{ site.baseurl }}/assets/images/kekhands.png)
 
 [link to older post]({{ 'blog/2023/05/11/first.html' | relative_url }})
+
+[other link to older post]({{ site.baseurl }}/blog/2023/05/11/first.html)
